# F1-firmware-task

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main_blink.c
